<resources>
    <string name="app_name">News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="society">社会新闻</string>
    <string name="county">国内新闻</string>
    <string name="international">国际新闻</string>
    <string name="fun">娱乐新闻</string>
    <string name="sport">体育新闻</string>
    <string name="nba">NBA新闻</string>
    <string name="football">足球新闻</string>
    <string name="technology">科技新闻</string>
    <string name="work">创业新闻</string>
    <string name="it">IT资讯</string>
    <string name="vr">VR科技</string>
    <string name="beauty">美女图片</string>
    <string name="strange">奇闻异事</string>
    <string name="health">健康知识</string>
    <string name="travel">旅游咨询</string>
    <string name="internet">移动互联</string>
    <string name="military">军事新闻</string>
    <string name="apple">苹果新闻</string>
</resources>
